Edited Daily Note, testing obsidian.

--- a/Journal/2025-05-02.md
+++ b/Journal/2025-05-02.md
@@ -34,6 +34,7 @@
 ## What Happened:
 - Probably gonna see if I can get off early today. We'll see.
 - Definitely getting off at 1 today. I'm going to go eat at Mcclurg with the guys first though.
+- Got home and had a beer. Good things.
 
 ## Brain Dump / Random Thoughts:
 - 
